# srspy

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/srspy/: __init__.py  log_entry.py  records.py  runs.py  srs.py
tests/: 01_smoke_test:_basics.py  01_smoke_test:_records.py  02_smoke_test:_basics.py  02_smoke_test:_runs.py  03_smoke_test:_srspy.py
