[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "srspy"
version = "0.0.2"
authors = [
  { name = "N. C. Landolfi", email="crews.fixture.0f@icloud.com"},
]
description = "A package for simple experiment run tracing."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "numpy", 
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nlandolfi/srspy"
